qfsm2gu/build.host/TransitionContainerParser.c
/** \file
 *  This C source file was generated by $ANTLR version 3.4
 *
 *     -  From the grammar source file : /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g
 *     -                            On : 2011-12-15 13:57:51
 *     -                for the parser : TransitionContainerParserParser
 *
 * Editing it, at least manually, is not wise.
 *
 * C language generator and runtime by Jim Idle, jimi|hereisanat|idle|dotgoeshere|ws.
 *
 *
*/
// [The "BSD license"]
// Copyright (c) 2005-2009 Jim Idle, Temporal Wave LLC
// http://www.temporal-wave.com
// http://www.linkedin.com/in/jimidle
//
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions
// are met:
// 1. Redistributions of source code must retain the above copyright
//    notice, this list of conditions and the following disclaimer.
// 2. Redistributions in binary form must reproduce the above copyright
//    notice, this list of conditions and the following disclaimer in the
//    documentation and/or other materials provided with the distribution.
// 3. The name of the author may not be used to endorse or promote products
//    derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
// IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
// OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
// IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
// NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
// THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

/* -----------------------------------------
 * Include the ANTLR3 generated header file.
 */
#include    "TransitionContainerParser.h"
/* ----------------------------------------- */





/* MACROS that hide the C interface implementations from the
 * generated code, which makes it a little more understandable to the human eye.
 * I am very much against using C pre-processor macros for function calls and bits
 * of code as you cannot see what is happening when single stepping in debuggers
 * and so on. The exception (in my book at least) is for generated code, where you are
 * not maintaining it, but may wish to read and understand it. If you single step it, you know that input()
 * hides some indirect calls, but is always referring to the input stream. This is
 * probably more readable than ctx->input->istream->input(snarfle0->blarg) and allows me to rejig
 * the runtime interfaces without changing the generated code too often, without
 * confusing the reader of the generated output, who may not wish to know the gory
 * details of the interface inheritance.
 */

#define		CTX	ctx

/* Aids in accessing scopes for grammar programmers
 */
#undef	SCOPE_TYPE
#undef	SCOPE_STACK
#undef	SCOPE_TOP
#define	SCOPE_TYPE(scope)   pTransitionContainerParser_##scope##_SCOPE
#define SCOPE_STACK(scope)  pTransitionContainerParser_##scope##Stack
#define	SCOPE_TOP(scope)    ctx->pTransitionContainerParser_##scope##Top
#define	SCOPE_SIZE(scope)		ctx->pTransitionContainerParser_##scope##Stack_limit
#define SCOPE_INSTANCE(scope, i)	(ctx->SCOPE_STACK(scope)->get(ctx->SCOPE_STACK(scope),i))

/* Macros for accessing things in the parser
 */

#undef	    PARSER
#undef	    RECOGNIZER
#undef	    HAVEPARSEDRULE
#undef		MEMOIZE
#undef	    INPUT
#undef	    STRSTREAM
#undef	    HASEXCEPTION
#undef	    EXCEPTION
#undef	    MATCHT
#undef	    MATCHANYT
#undef	    FOLLOWSTACK
#undef	    FOLLOWPUSH
#undef	    FOLLOWPOP
#undef	    PRECOVER
#undef	    PREPORTERROR
#undef	    LA
#undef	    LT
#undef	    CONSTRUCTEX
#undef	    CONSUME
#undef	    MARK
#undef	    REWIND
#undef	    REWINDLAST
#undef	    PERRORRECOVERY
#undef	    HASFAILED
#undef	    FAILEDFLAG
#undef	    RECOVERFROMMISMATCHEDSET
#undef	    RECOVERFROMMISMATCHEDELEMENT
#undef		INDEX
#undef      ADAPTOR
#undef		SEEK
#undef	    RULEMEMO
#undef		DBG

#define	    PARSER				ctx->pParser
#define	    RECOGNIZER				PARSER->rec
#define	    PSRSTATE				RECOGNIZER->state
#define	    HAVEPARSEDRULE(r)			RECOGNIZER->alreadyParsedRule(RECOGNIZER, r)
#define	    MEMOIZE(ri,si)			RECOGNIZER->memoize(RECOGNIZER, ri, si)
#define	    INPUT				PARSER->tstream
#define	    STRSTREAM				INPUT
#define	    ISTREAM				INPUT->istream
#define	    INDEX()				ISTREAM->index(INPUT->istream)
#define	    HASEXCEPTION()			(PSRSTATE->error == ANTLR3_TRUE)
#define	    EXCEPTION				PSRSTATE->exception
#define	    MATCHT(t, fs)			RECOGNIZER->match(RECOGNIZER, t, fs)
#define	    MATCHANYT()				RECOGNIZER->matchAny(RECOGNIZER)
#define	    FOLLOWSTACK				PSRSTATE->following
#ifdef  SKIP_FOLLOW_SETS
#define	    FOLLOWPUSH(x)
#define	    FOLLOWPOP()
#else
#define	    FOLLOWPUSH(x)			FOLLOWSTACK->push(FOLLOWSTACK, ((void *)(&(x))), NULL)
#define	    FOLLOWPOP()				FOLLOWSTACK->pop(FOLLOWSTACK)
#endif
#define	    PRECOVER()				RECOGNIZER->recover(RECOGNIZER)
#define	    PREPORTERROR()			RECOGNIZER->reportError(RECOGNIZER)
#define	    LA(n)				INPUT->istream->_LA(ISTREAM, n)
#define	    LT(n)				INPUT->_LT(INPUT, n)
#define	    CONSTRUCTEX()			RECOGNIZER->exConstruct(RECOGNIZER)
#define	    CONSUME()				ISTREAM->consume(ISTREAM)
#define	    MARK()				ISTREAM->mark(ISTREAM)
#define	    REWIND(m)				ISTREAM->rewind(ISTREAM, m)
#define	    REWINDLAST()			ISTREAM->rewindLast(ISTREAM)
#define	    SEEK(n)				ISTREAM->seek(ISTREAM, n)
#define	    PERRORRECOVERY			PSRSTATE->errorRecovery
#define	    FAILEDFLAG				PSRSTATE->failed
#define	    HASFAILED()				(FAILEDFLAG == ANTLR3_TRUE)
#define	    BACKTRACKING			PSRSTATE->backtracking
#define	    RECOVERFROMMISMATCHEDSET(s)		RECOGNIZER->recoverFromMismatchedSet(RECOGNIZER, s)
#define	    RECOVERFROMMISMATCHEDELEMENT(e)	RECOGNIZER->recoverFromMismatchedElement(RECOGNIZER, s)
#define     ADAPTOR                         ctx->adaptor
#define		RULEMEMO						PSRSTATE->ruleMemo
#define		DBG								RECOGNIZER->debugger


#define		TOKTEXT(tok, txt)				tok, (pANTLR3_UINT8)txt

/* The 4 tokens defined below may well clash with your own #defines or token types. If so
 * then for the present you must use different names for your defines as these are hard coded
 * in the code generator. It would be better not to use such names internally, and maybe
 * we can change this in a forthcoming release. I deliberately do not #undef these
 * here as this will at least give you a redefined error somewhere if they clash.
 */
#define	    UP	    ANTLR3_TOKEN_UP
#define	    DOWN    ANTLR3_TOKEN_DOWN
#define	    EOR	    ANTLR3_TOKEN_EOR
#define	    INVALID ANTLR3_TOKEN_INVALID


/* =============================================================================
 * Functions to create and destroy scopes. First come the rule scopes, followed
 * by the global declared scopes.
 */



/* ============================================================================= */

/* =============================================================================
 * Start of recognizer
 */


/** \brief Table of all token names in symbolic order, mainly used for
 *         error reporting.
 */
pANTLR3_UINT8   TransitionContainerParserTokenNames[36+4]
     = {
        (pANTLR3_UINT8) "<invalid>",       /* String to print to indicate an invalid token */
        (pANTLR3_UINT8) "<EOR>",
        (pANTLR3_UINT8) "<DOWN>",
        (pANTLR3_UINT8) "<UP>",
        (pANTLR3_UINT8) "ARG_DEF",
        (pANTLR3_UINT8) "BLOCK",
        (pANTLR3_UINT8) "EOL",
        (pANTLR3_UINT8) "EscapeSequence",
        (pANTLR3_UINT8) "FUNC_DECL",
        (pANTLR3_UINT8) "FUNC_DEF",
        (pANTLR3_UINT8) "FUNC_HDR",
        (pANTLR3_UINT8) "INTERNALPART",
        (pANTLR3_UINT8) "K_ANDAND",
        (pANTLR3_UINT8) "K_CHAR",
        (pANTLR3_UINT8) "K_COMMA",
        (pANTLR3_UINT8) "K_EQ",
        (pANTLR3_UINT8) "K_EQEQ",
        (pANTLR3_UINT8) "K_FOR",
        (pANTLR3_UINT8) "K_ID",
        (pANTLR3_UINT8) "K_INT",
        (pANTLR3_UINT8) "K_INT_TYPE",
        (pANTLR3_UINT8) "K_LCURLY",
        (pANTLR3_UINT8) "K_LCURVE",
        (pANTLR3_UINT8) "K_LT",
        (pANTLR3_UINT8) "K_MINUS",
        (pANTLR3_UINT8) "K_NOT",
        (pANTLR3_UINT8) "K_OROR",
        (pANTLR3_UINT8) "K_PLUS",
        (pANTLR3_UINT8) "K_RCURLY",
        (pANTLR3_UINT8) "K_RCURVE",
        (pANTLR3_UINT8) "K_SEMICOLON",
        (pANTLR3_UINT8) "K_VOID",
        (pANTLR3_UINT8) "ONENTRY",
        (pANTLR3_UINT8) "ONEXIT",
        (pANTLR3_UINT8) "STATEMENT_LIST",
        (pANTLR3_UINT8) "STATENAME",
        (pANTLR3_UINT8) "STRING_GUTS",
        (pANTLR3_UINT8) "STRING_LITERAL",
        (pANTLR3_UINT8) "VAR_DEF",
        (pANTLR3_UINT8) "WS"
       };



// Forward declare the locally static matching functions we have generated.
//
static 
 TransitionContainerParser_transitions_return
	transitions    (pTransitionContainerParser ctx);
static 
 TransitionContainerParser_transition_return
	transition    (pTransitionContainerParser ctx);
static 
 TransitionContainerParser_state_id_return
	state_id    (pTransitionContainerParser ctx);
static void	TransitionContainerParserFree(pTransitionContainerParser ctx);
static void     TransitionContainerParserReset (pTransitionContainerParser ctx);

// Delegated rules
//
static 
 TransitionContainer_SimpleCParser_program_return
 program(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_statement_return
 statement(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_declarator_return
 declarator(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_literal_return
 literal(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_variable_return
 variable(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_expr_return
 expr(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_aexpr_return
 aexpr(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_condExpr_return
 condExpr(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_functionHeader_return
 functionHeader(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_assignStat_return
 assignStat(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_atom_return
 atom(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_declaration_return
 declaration(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_type_return
 type(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_functionCallOrVariable_return
 functionCallOrVariable(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_formalParameter_return
 formalParameter(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_block_return
 block(pTransitionContainerParser ctx);
static 
 TransitionContainer_SimpleCParser_forStat_return
 forStat(pTransitionContainerParser ctx);


/* For use in tree output where we are accumulating rule labels via label += ruleRef
 * we need a function that knows how to free a return scope when the list is destroyed.
 * We cannot just use ANTLR3_FREE because in debug tracking mode, this is a macro.
 */
static	void ANTLR3_CDECL freeScope(void * scope)
{
    ANTLR3_FREE(scope);
}

/** \brief Name of the grammar file that generated this code
 */
static const char fileName[] = "/Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g";

/** \brief Return the name of the grammar file that generated this code.
 */
static const char * getGrammarFileName()
{
	return fileName;
}
/** \brief Create a new TransitionContainerParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pTransitionContainerParser
TransitionContainerParserNew   (pANTLR3_COMMON_TOKEN_STREAM instream)
{
	// See if we can create a new parser with the standard constructor
	//
	return TransitionContainerParserNewSSD(instream, NULL);
}

/** \brief Create a new TransitionContainerParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pTransitionContainerParser
TransitionContainerParserNewSSD   (pANTLR3_COMMON_TOKEN_STREAM instream, pANTLR3_RECOGNIZER_SHARED_STATE state)
{
    pTransitionContainerParser ctx;	    /* Context structure we will build and return   */

    ctx	= (pTransitionContainerParser) ANTLR3_CALLOC(1, sizeof(TransitionContainerParser));

    if	(ctx == NULL)
    {
		// Failed to allocate memory for parser context
		//
        return  NULL;
    }

    /* -------------------------------------------------------------------
     * Memory for basic structure is allocated, now to fill in
     * the base ANTLR3 structures. We initialize the function pointers
     * for the standard ANTLR3 parser function set, but upon return
     * from here, the programmer may set the pointers to provide custom
     * implementations of each function.
     *
     * We don't use the macros defined in TransitionContainerParser.h here, in order that you can get a sense
     * of what goes where.
     */

    /* Create a base parser/recognizer, using the supplied token stream
     */
    ctx->pParser	    = antlr3ParserNewStream(ANTLR3_SIZE_HINT, instream->tstream, state);
    /* Install the implementation of our TransitionContainerParser interface
     */
    ctx->transitions	= transitions;
    ctx->transition	= transition;
    ctx->state_id	= state_id;
	// Install the delegated methods so that they appear to be a part of this
	// parser
	//
    ctx->program	= program;
    ctx->statement	= statement;
    ctx->declarator	= declarator;
    ctx->literal	= literal;
    ctx->variable	= variable;
    ctx->expr	= expr;
    ctx->aexpr	= aexpr;
    ctx->condExpr	= condExpr;
    ctx->functionHeader	= functionHeader;
    ctx->assignStat	= assignStat;
    ctx->atom	= atom;
    ctx->declaration	= declaration;
    ctx->type	= type;
    ctx->functionCallOrVariable	= functionCallOrVariable;
    ctx->formalParameter	= formalParameter;
    ctx->block	= block;
    ctx->forStat	= forStat;

    ctx->free			= TransitionContainerParserFree;
    ctx->reset			= TransitionContainerParserReset;
    ctx->getGrammarFileName	= getGrammarFileName;

    /* Install the scope pushing methods.
     */
ADAPTOR	= ANTLR3_TREE_ADAPTORNew(instream->tstream->tokenSource->strFactory);

ctx->vectors	= antlr3VectorFactoryNew(0);
	// Initialize the parsers that we are going to delegate some
	// functions to.
	//
	ctx->gSimpleCParser = TransitionContainer_SimpleCParserNewSSD(instream, PSRSTATE, ctx);
    /* Install the token table
     */
    PSRSTATE->tokenNames   = TransitionContainerParserTokenNames;


    /* Return the newly built parser to the caller
     */
    return  ctx;
}

static void
TransitionContainerParserReset (pTransitionContainerParser ctx)
{
    RECOGNIZER->reset(RECOGNIZER);
}

/** Free the parser resources
 */
 static void
 TransitionContainerParserFree(pTransitionContainerParser ctx)
 {
    /* Free any scope memory
     */

ctx->vectors->close(ctx->vectors);
/* We created the adaptor so we must free it
 */
ADAPTOR->free(ADAPTOR);

	// Free the parsers that we delegated to
	// functions to.NULL the state so we only free it once.
	//
	ctx->gSimpleCParser->pParser->rec->state = NULL;
	         ctx->gSimpleCParser->free(ctx->gSimpleCParser);
	// Free this parser
	//
    ctx->pParser->free(ctx->pParser);


    ANTLR3_FREE(ctx);

    /* Everything is released, so we can return
     */
    return;
 }

/** Return token names used by this 
parser

 *
 * The returned pointer is used as an index into the token names table (using the token
 * number as the index).
 *
 * \return Pointer to first char * in the table.
 */
static pANTLR3_UINT8    *getTokenNames()
{
        return TransitionContainerParserTokenNames;
}


/* Declare the bitsets
 */
/** Bitset defining follow set for error recovery in rule state: FOLLOW_transition_in_transitions39  */
static	ANTLR3_BITWORD FOLLOW_transition_in_transitions39_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000080042) };
static  ANTLR3_BITSET_LIST FOLLOW_transition_in_transitions39	= { FOLLOW_transition_in_transitions39_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_EOL_in_transitions41  */
static	ANTLR3_BITWORD FOLLOW_EOL_in_transitions41_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000080042) };
static  ANTLR3_BITSET_LIST FOLLOW_EOL_in_transitions41	= { FOLLOW_EOL_in_transitions41_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_state_id_in_transition56  */
static	ANTLR3_BITWORD FOLLOW_state_id_in_transition56_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000080000) };
static  ANTLR3_BITSET_LIST FOLLOW_state_id_in_transition56	= { FOLLOW_state_id_in_transition56_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_state_id_in_transition59  */
static	ANTLR3_BITWORD FOLLOW_state_id_in_transition59_bits[]	= { ANTLR3_UINT64_LIT(0x00000020024C0000) };
static  ANTLR3_BITSET_LIST FOLLOW_state_id_in_transition59	= { FOLLOW_state_id_in_transition59_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_expr_in_transition61  */
static	ANTLR3_BITWORD FOLLOW_expr_in_transition61_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_expr_in_transition61	= { FOLLOW_expr_in_transition61_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_K_INT_in_state_id72  */
static	ANTLR3_BITWORD FOLLOW_K_INT_in_state_id72_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_K_INT_in_state_id72	= { FOLLOW_K_INT_in_state_id72_bits, 1	};


/* ==============================================
 * Parsing rules
 */
/**
 * $ANTLR start transitions
 * /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:9:1: transitions : ( transition ( EOL )* )+ ;
 */
static TransitionContainerParser_transitions_return
transitions(pTransitionContainerParser ctx)
{
    TransitionContainerParser_transitions_return retval;


    pANTLR3_BASE_TREE root_0;

    pANTLR3_COMMON_TOKEN    EOL2;
    TransitionContainerParser_transition_return transition1;
    #undef	RETURN_TYPE_transition1
    #define	RETURN_TYPE_transition1 TransitionContainerParser_transition_return

    pANTLR3_BASE_TREE EOL2_tree;

    /* Initialize rule variables
     */

    root_0 = NULL;

    EOL2       = NULL;
    transition1.tree = NULL;
    retval.start = LT(1); retval.stop = retval.start;


    EOL2_tree   = NULL;


    retval.tree  = NULL;

    {
        // /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:9:12: ( ( transition ( EOL )* )+ )
        // /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:9:16: ( transition ( EOL )* )+
        {
            root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));


            // /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:9:16: ( transition ( EOL )* )+
            {
                int cnt2=0;

                for (;;)
                {
                    int alt2=2;
            	switch ( LA(1) )
            	{
            	case K_INT:
            		{
            			alt2=1;
            		}
            	    break;

            	}

            	switch (alt2)
            	{
            	    case 1:
            	        // /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:9:18: transition ( EOL )*
            	        {
            	            FOLLOWPUSH(FOLLOW_transition_in_transitions39);
            	            transition1=transition(ctx);

            	            FOLLOWPOP();
            	            if  (HASEXCEPTION())
            	            {
            	                goto ruletransitionsEx;
            	            }

            	            ADAPTOR->addChild(ADAPTOR, root_0, transition1.tree);

            	            // /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:9:29: ( EOL )*

            	            for (;;)
            	            {
            	                int alt1=2;
            	                switch ( LA(1) )
            	                {
            	                case EOL:
            	                	{
            	                		alt1=1;
            	                	}
            	                    break;

            	                }

            	                switch (alt1)
            	                {
            	            	case 1:
            	            	    // /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:9:29: EOL
            	            	    {
            	            	        EOL2 = (pANTLR3_COMMON_TOKEN) MATCHT(EOL, &FOLLOW_EOL_in_transitions41);
            	            	        if  (HASEXCEPTION())
            	            	        {
            	            	            goto ruletransitionsEx;
            	            	        }

            	            	        EOL2_tree = (pANTLR3_BASE_TREE)(ADAPTOR->create(ADAPTOR, EOL2));
            	            	        ADAPTOR->addChild(ADAPTOR, root_0, EOL2_tree);


            	            	    }
            	            	    break;

            	            	default:
            	            	    goto loop1;	/* break out of the loop */
            	            	    break;
            	                }
            	            }
            	            loop1: ; /* Jump out to here if this rule does not match */


            	        }
            	        break;

            	    default:

            		if ( cnt2 >= 1 )
            		{
            		    goto loop2;
            		}
            		/* mismatchedSetEx()
            		 */
            		CONSTRUCTEX();
            		EXCEPTION->type = ANTLR3_EARLY_EXIT_EXCEPTION;
            		EXCEPTION->name = (void *)ANTLR3_EARLY_EXIT_NAME;


            		goto ruletransitionsEx;
            	}
            	cnt2++;
                }
                loop2: ;	/* Jump to here if this rule does not match */
            }

        }

    }

    // This is where rules clean up and exit
    //
    goto ruletransitionsEx; /* Prevent compiler warnings */
    ruletransitionsEx: ;
    retval.stop = LT(-1);


    	retval.stop = LT(-1);

    	retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->rulePostProcessing(ADAPTOR, root_0));
    	ADAPTOR->setTokenBoundaries(ADAPTOR, retval.tree, retval.start, retval.stop);

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
                retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->errorNode(ADAPTOR, INPUT, retval.start, LT(-1), EXCEPTION));
            }
    return retval;
}
/* $ANTLR end transitions */

/**
 * $ANTLR start transition
 * /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:11:1: transition : ( state_id ^ state_id expr ) ;
 */
static TransitionContainerParser_transition_return
transition(pTransitionContainerParser ctx)
{
    TransitionContainerParser_transition_return retval;


    pANTLR3_BASE_TREE root_0;

    TransitionContainerParser_state_id_return state_id3;
    #undef	RETURN_TYPE_state_id3
    #define	RETURN_TYPE_state_id3 TransitionContainerParser_state_id_return

    TransitionContainerParser_state_id_return state_id4;
    #undef	RETURN_TYPE_state_id4
    #define	RETURN_TYPE_state_id4 TransitionContainerParser_state_id_return

    TransitionContainer_SimpleCParser_expr_return expr5;
    #undef	RETURN_TYPE_expr5
    #define	RETURN_TYPE_expr5 TransitionContainer_SimpleCParser_expr_return


    /* Initialize rule variables
     */

    root_0 = NULL;

    state_id3.tree = NULL;

    state_id4.tree = NULL;

    expr5.tree = NULL;
    retval.start = LT(1); retval.stop = retval.start;




    retval.tree  = NULL;

    {
        // /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:11:11: ( ( state_id ^ state_id expr ) )
        // /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:11:15: ( state_id ^ state_id expr )
        {
            root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));


            // /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:11:15: ( state_id ^ state_id expr )
            // /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:11:17: state_id ^ state_id expr
            {
                FOLLOWPUSH(FOLLOW_state_id_in_transition56);
                state_id3=state_id(ctx);

                FOLLOWPOP();
                if  (HASEXCEPTION())
                {
                    goto ruletransitionEx;
                }

                root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->becomeRoot(ADAPTOR, state_id3.tree, root_0));

                FOLLOWPUSH(FOLLOW_state_id_in_transition59);
                state_id4=state_id(ctx);

                FOLLOWPOP();
                if  (HASEXCEPTION())
                {
                    goto ruletransitionEx;
                }

                ADAPTOR->addChild(ADAPTOR, root_0, state_id4.tree);

                FOLLOWPUSH(FOLLOW_expr_in_transition61);
                expr5=expr(ctx);

                FOLLOWPOP();
                if  (HASEXCEPTION())
                {
                    goto ruletransitionEx;
                }

                ADAPTOR->addChild(ADAPTOR, root_0, expr5.tree);

            }


        }

    }

    // This is where rules clean up and exit
    //
    goto ruletransitionEx; /* Prevent compiler warnings */
    ruletransitionEx: ;
    retval.stop = LT(-1);


    	retval.stop = LT(-1);

    	retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->rulePostProcessing(ADAPTOR, root_0));
    	ADAPTOR->setTokenBoundaries(ADAPTOR, retval.tree, retval.start, retval.stop);

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
                retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->errorNode(ADAPTOR, INPUT, retval.start, LT(-1), EXCEPTION));
            }
    return retval;
}
/* $ANTLR end transition */

/**
 * $ANTLR start state_id
 * /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:13:1: state_id : K_INT ;
 */
static TransitionContainerParser_state_id_return
state_id(pTransitionContainerParser ctx)
{
    TransitionContainerParser_state_id_return retval;


    pANTLR3_BASE_TREE root_0;

    pANTLR3_COMMON_TOKEN    K_INT6;

    pANTLR3_BASE_TREE K_INT6_tree;

    /* Initialize rule variables
     */

    root_0 = NULL;

    K_INT6       = NULL;
    retval.start = LT(1); retval.stop = retval.start;


    K_INT6_tree   = NULL;


    retval.tree  = NULL;

    {
        // /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:13:9: ( K_INT )
        // /Users/Robert/src/MiPal/GUNao/posix/gufsm/qfsm2gu/../LANGUAGE/TransitionContainer.g:13:12: K_INT
        {
            root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));


            K_INT6 = (pANTLR3_COMMON_TOKEN) MATCHT(K_INT, &FOLLOW_K_INT_in_state_id72);
            if  (HASEXCEPTION())
            {
                goto rulestate_idEx;
            }

            K_INT6_tree = (pANTLR3_BASE_TREE)(ADAPTOR->create(ADAPTOR, K_INT6));
            ADAPTOR->addChild(ADAPTOR, root_0, K_INT6_tree);


        }

    }

    // This is where rules clean up and exit
    //
    goto rulestate_idEx; /* Prevent compiler warnings */
    rulestate_idEx: ;
    retval.stop = LT(-1);


    	retval.stop = LT(-1);

    	retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->rulePostProcessing(ADAPTOR, root_0));
    	ADAPTOR->setTokenBoundaries(ADAPTOR, retval.tree, retval.start, retval.stop);

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
                retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->errorNode(ADAPTOR, INPUT, retval.start, LT(-1), EXCEPTION));
            }
    return retval;
}
/* $ANTLR end state_id */
	// Delegated methods that appear to be a part of this
	// parser
	//
    TransitionContainer_SimpleCParser_program_return program(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->program(ctx->gSimpleCParser);
	}

    TransitionContainer_SimpleCParser_statement_return statement(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->statement(ctx->gSimpleCParser);
	}

    TransitionContainer_SimpleCParser_declarator_return declarator(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->declarator(ctx->gSimpleCParser);
	}

    TransitionContainer_SimpleCParser_literal_return literal(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->literal(ctx->gSimpleCParser);
	}

    TransitionContainer_SimpleCParser_variable_return variable(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->variable(ctx->gSimpleCParser);
	}

    TransitionContainer_SimpleCParser_expr_return expr(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->expr(ctx->gSimpleCParser);
	}

    TransitionContainer_SimpleCParser_aexpr_return aexpr(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->aexpr(ctx->gSimpleCParser);
	}

    TransitionContainer_SimpleCParser_condExpr_return condExpr(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->condExpr(ctx->gSimpleCParser);
	}

    TransitionContainer_SimpleCParser_functionHeader_return functionHeader(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->functionHeader(ctx->gSimpleCParser);
	}

    TransitionContainer_SimpleCParser_assignStat_return assignStat(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->assignStat(ctx->gSimpleCParser);
	}

    TransitionContainer_SimpleCParser_atom_return atom(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->atom(ctx->gSimpleCParser);
	}

    TransitionContainer_SimpleCParser_declaration_return declaration(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->declaration(ctx->gSimpleCParser);
	}

    TransitionContainer_SimpleCParser_type_return type(pTransitionContainerParser ctx)
    {
        return        ctx->gSimpleCParser->type(ctx->gSimpleCParser);
	}
